Fixed spacing on index.html next to line

--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ article img {
 }
 
 .textwrap {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   margin-top: -0.8rem;
   width: 100%;
   margin-right: 2rem;
